src/tests/testfiles/binary-operator-types-2.txt
Error at 2:8: Comparison operator operands need to be of same type
"a" == 'c';
    ^
